# Conflict_Bench

./: .gitignore  PRD.md  README.md  __init__.py  app.py  blog.md  conflict_bench.py  diagnose_tokens.py  generator.py  inference.py  openenv.yaml  push_to_hf_space.py  pyproject.toml  requirements.txt  train_grpo.py  train_grpo_prod.py  verifier.py
docs/: REWARD_DESIGN.md  TRAINING_GUIDE.md  TRAINING_LOGS.md  architecture.md
hf_space/: CLAUDE.md  README.md  app.py  requirements.txt  train.py
hf_space_a100/: Dockerfile  app.py  requirements.txt  train_script.py
hf_space_l40s/: README.md  app.py  train_script.py
server/: __init__.py  app.py  conflictbench_environment.py
training_space/: README.md
